# rapid-tui

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_app.py
.claude/: CLAUDE.md
.claude/agents/python/: python-code-agent.md
.claude/commands/: rapid-inspect.md
.github/prompts/: rapid-develop.prompt.md  rapid-init.prompt.md  rapid-inspect.prompt.md  rapid-plan.md  rapid-research.prompt.md
.rapid/agents/python/: python-code-agent.md
.rapid/bug-init/: bug-research.md
.rapid/commands/: rapid-align.md  rapid-develop.md  rapid-init.md  rapid-research.md
.rapid/feature-unit-tests-pytest/: plan.md  research-prompt.md  research.md
.rapid/frameworks/: textual-css.txt
.rapid/prompts/: rapid-align.prompt.md  rapid-plan.prompt.md
.rapid/rapid-file-sync/: plan.md  research-prompt.md  research.md
docs/: helper-scripts.md  rapid-cli-usage.md  v0-architecture.md
imgs/: logo.txt
src/rapid_tui/: __init__.py  app.py  config.py  models.py  styles.css  theme.py  widgets.py
src/rapid_tui/cli/: __init__.py  main.py
src/rapid_tui/cli/commands/: __init__.py  config.py  init.py  list.py  status.py  update.py
src/rapid_tui/screens/: __init__.py  assistant_select.py  base.py  confirmation.py  language_select.py  language_select.tcss  language_select_v2.py
src/rapid_tui/services/: __init__.py  initialization.py  update.py
src/rapid_tui/utils/: __init__.py  file_operations.py  logo.py
templates/agents/angular/: rapid-code-agent.md  rapid-planning-agent.md
templates/agents/generic/: rapid-code-agent.md  rapid-planning-agent.md
templates/agents/python/: python-planning-agent.md
templates/commands/: rapid-init.md
templates/instructions/: angular.md  generic.md  python.md  see-sharp.md
templates/prompts/: rapid-develop.prompt.md  rapid-plan.prompt.md
tests/: __init__.py  conftest.py  test_cli_main.py  test_config.py  test_file_operations.py  test_helpers.py  test_models.py  test_services_initialization.py  test_services_update.py
