[project]
name = "rapid-tui"
version = "0.2.0"
description = "A CLI for the RAPID framework"
authors = [
    {name = "94aharris"}
]
readme = "README.md"
requires-python = ">= 3.11, < 4.0"
dependencies = [
    "textual (>=6.1.0,<7.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "typer[all] (>=0.9.0,<1.0.0)",
    "rich (>=13.0.0,<14.0.0)"
]

[project.scripts]
rapid = "rapid_tui.app:main"

[tool.poetry]
packages = [{include = "rapid_tui", from = "src"}]
include = ["templates/**/*"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.0.0"
pytest-mock = "^3.12.0"
pre-commit = "^4.0.1"
ruff = "^0.7.4"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=src/rapid_tui",
    "--cov-report=term-missing",
    "--cov-report=html"
]
minversion = "6.0"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
